# cmake-project-demo

./: CMakeLists.txt
proj_1/: CMakeLists.txt
proj_1/src/: main.cpp
proj_2/: CMakeLists.txt
